--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "client side chrome extension",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "css:build": "./node_modules/.bin/node-sass ./scss/styles.scss ./public/css/styles.css -w scss/",
-    "js:build": "./node_modules/.bin/webpack --progress --colors --watch",
-    "dev": "parallelshell 'npm run css:build' 'npm run js:build'"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,19 +17,15 @@
   },
   "homepage": "https://github.com/Must-Stash/Must-Stash-Extension#readme",
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "jquery": "^2.2.3",
-    "node-sass": "^3.7.0",
     "nodemon": "^1.9.2",
-    "parallelshell": "^2.0.0",
-    "postcss-cli": "^2.5.2",
     "webpack": "^1.13.0"
   },
   "dependencies": {
+    "jquery": "^2.2.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
   }
