--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
   },
   "permissions": [
     "history",
-    "activeTab",
     "tabs",
     "storage",
+    "unlimitedStorage",
     "webNavigation",
     "webRequest",
     "http://*/*",
@@ -25,6 +25,6 @@
   "options_page": "./options/options.html",
   "background": {
     "persistent": true,
-    "scripts": ["jquery.js", "./background/background.js"]
+    "scripts": ["./background/js/background-bundle.js"]
   }
 }
