--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "manifest_version": 2,
   "description": "Enhanced Personalized Search Tool",
   "icons": {
-    "16": "muststash_temp_icon.png",
-    "48": "muststash_temp_icon.png",
-    "128": "muststash_temp_icon.png"
+    "16": "/images/icon-16-blue.png",
+    "48": "/images/icon-48-blue.png",
+    "128": "/images/icon-128-blue.png"
   },
   "permissions": [
     "history",
@@ -20,7 +20,7 @@
   ],
   "browser_action": {
     "default_popup": "./popup/popup.html",
-    "default_icon": "muststash_temp_icon.png"
+    "default_icon": "/images/icon-128-blue.png"
   },
   "options_page": "./options/options.html",
   "background": {
